...
    <string name="enter_latitude_longitude">Please enter latitude and longitude</string>
    <string name="refresh">Refresh</string>
    <string name="error" translatable="false">Unexpected Error</string>
    <string name="delete">Delete One Favorite city</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="lookup">Lookup</string>
    <string name="default_result_text">Lookup result will display here</string>
    <string name="location_name_hint">Please input the location name</string>
    <string name="location_not_null">Location name cannot be null</string>
    <string name="location_saved">Location Saved</string>
    <string name="save_location">Save Location</string>
    <string name="MainActivity_Instruction">
        1. Please input latitude and longitude.\n
        2. Input location name to mark if necessary.\n
        3. Click \"Lookup\" to retrieve sunset/sunrise time.\n
        4. If need save this location, click \"Save\" to store.</string>
    <string name="main_instruction">Main Instruction</string>
...
    <string name="FavoriteActivity_Instruction">
        1. Delete all locations by clicking delete TOP icon.\n
        2. Delete specific location by clicking delete SIDE icon.\n
        3. Click specific location to back to MainActivity if need update.\n
        4. Search location by typing specific location name</string>
    <string name="location_instruction">Saved Locations Instruction</string>
    <string name="showFavorites">Show Favorites</string>
    <string name="all_delete">Delete All Favorite city</string>
    <string name="search_locations">Search Saved locations by locationName</string>
    <string name="content_clear">Contents cleared.</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="name">name</string>
    <string name="clear_locations">Clear LOCATIONS</string>
    <string name="sure_to_delete_all">Are you sure to delete ALL saved locations？</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="url_part1">https://api.sunrisesunset.io/json?lat=</string>
    <string name="url_part3"><![CDATA[&timezone=UTC&date=today]]></string>
    <string name="url_part2"><![CDATA[&lng=]]></string>
    <string name="status">status</string>
    <string name="results">results</string>
...
