<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#94C55C"
        android:text="Name" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginStart="8dp"
        android:background="#00BCD4"
        android:text="Latitude" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginStart="8dp"
        android:background="#00BCD4"
        android:text="Longitude" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_delete" />
<!--        app:srcCompat="@drawable/ic_delete"-->
<!--        android:text="Delete"/>-->

</LinearLayout>
